@@ -34,9 +34,8 @@ if ( empty ( $user ) ) {
     send_to_preferred_view ();
 }
 
-
 // Handle delete
-if ( ( $action == "Delete" || $action == translate ("Delete") ) &&
+if ( ( $action == "Delete" || $action == html_entity_decode ( translate ("Delete") ) ) &&
   $formtype == "edituser" ) {
   if ( access_can_access_function ( ACCESS_USER_MANAGEMENT ) ) {
     if ( $admin_can_delete_user ) {
